fixing nav alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,13 +17,14 @@ body{
 }
 
 /* Main */
-.canvasContainer{
+#canvasContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-family: 'Courier New', Courier, monospace;
 }
 #navContainer{
-    position: absolute;
-    top: 50%;
-    left: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
